feat: document summary
